Mise à jour de la page de liste des technologies + déplacement de celle-ci dans le menu jeu.

--- a/src/LarpManager/Views/admin/technologie/index.twig
+++ b/src/LarpManager/Views/admin/technologie/index.twig
@@ -9,32 +9,6 @@
 		<li class="active">Liste des technologies</li>
 	</ol>
 
-{#	<div class="well well-sm">#}
-{#	#}
-{#		<a href="{{ path('technologie.add') }}"><i class="fa fa-plus"></i> Ajouter une technologie</a>#}
-{#		#}
-{#		<ul class="list-group">#}
-{#		{% for technologie in technologies %}#}
-{#		#}
-{#			<li class="list-group-item">#}
-{#				<div class="row">#}
-{#					<div class="col-md-8">#}
-{#						{{ technologie.label }}#}
-{#						{{ technologie.description|markdown }}#}
-{#					</div>#}
-{#					<div class="col-md-4">#}
-{#						<a href="{{ path('technologie.update',{'technologie':technologie.id}) }}"><i class="fa fa-pencil"></i> Modifier</a>&nbsp;|&nbsp;#}
-{#						<a href="{{ path('technologie.detail',{'technologie':technologie.id}) }}"><i class="fa fa-eye"></i> Detail</a>&nbsp;|&nbsp;#}
-{#						<a href="{{ path('technologie.personnages',{'technologie':technologie.id}) }}"><i class="fa fa-users"></i> Personnages</a>&nbsp;|&nbsp;#}
-{#						<a href="{{ path('technologie.delete',{'technologie':technologie.id}) }}"><i class="fa fa-eraser"></i> Supprimer</a>#}
-{#					</div>#}
-{#				</div>#}
-{#		    </li>#}
-
-{#		{% endfor %}#}
-{#	 	</ul>#}
-{#	</div>#}
-
 	<div class="well bs-component">
 		<a href="{{ path('technologie.add') }}"><i class="fa fa-plus"></i> Ajouter une technologie</a>
 		<table class="table table-striped table-bordered table-condensed">
@@ -59,7 +33,7 @@
 						{% endif %}
 					</td>
 					<td>{{ technologie.competenceFamily.label }}</td>
-					<td>{{ technologie.description}}</td>
+					<td>{{ technologie.description | striptags}}</td>
 					<td>{% for technologieRessource in technologie.ressources %}
 							{{ technologieRessource.quantite }} {{ technologieRessource.ressource.label }} /
 						{% endfor %}
