--- a/src/LarpManager/Views/admin/technologie/personnages.twig
+++ b/src/LarpManager/Views/admin/technologie/personnages.twig
@@ -13,9 +13,10 @@
 	{{ include('admin/personnage/search.twig',
 		 	{
 			 displayAdminToolbar: false, 
-			 displaySearchFilter: false
-		  	} 
-  		) 
-	 }}	
+			 displaySearchFilter: false,
+			 extraData: 'Artisanat'
+		  	}
+  		)
+	}}
 	
 {% endblock content %}
