--- a/src/LarpManager/Views/admin/lignee/details.twig
+++ b/src/LarpManager/Views/admin/lignee/details.twig
@@ -58,47 +58,48 @@
                 {% set iconPjOld = '<span title="Ancien PJ ne participant pas au GN actif">➖</span>' %}
 
                 <div class="panel-body">
+                    <div class="legend"><span class="legend-header">Légende Statut : </span>{{ iconPjConfirmed | raw }} = PJ Actif, {{ iconPnj | raw }} = PNJ, {{ iconPjOld | raw }} = PJ Non actif, {{ iconPjDead | raw }} = Mort</div>
+                    </div>
                     <table class="table table-striped table-bordered table-condensed">
                         <th>ID</th>
-                        <th>Nom</th>
-                        <th>Âge</th>
                         <th>Statut</th>
+                        <th>Nom</th>
+                        <th>Groupe</th>
+                        <th>Âge</th>
                         <th>Parent 1</th>
                         <th>Parent 2</th>
-                        <th>Groupe</th>
                         <th>Retirer membre</th>
 
                          {% for personnageLignee in lignee.personnageLignees %}
                              <tr>
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.personnage.id}) }}">{{ personnageLignee.personnage.id }}</a> </td>
+                                 <td>
+					    	        {% if personnageLignee.personnage.vivant == 0 %}
+                                        {{ iconPjDead | raw }}
+                                    {% elseif personnageLignee.personnage.isPnj() %}
+                                        {{ iconPnj | raw }}
+                                    {% elseif personnageLignee.personnage.isLastParticipantOnActiveGn() %}
+                                        {{ iconPjConfirmed | raw }}
+                                    {% else %}
+                                        {{ iconPjOld | raw }}
+                                    {% endif %}
+                                 </td>                                 
                                  <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.personnage.id}) }}">{{ personnageLignee.personnage.nom}}</a></td>
-                                 <td>{{ personnageLignee.personnage.ageReel }} ans</td>
-
-                                 <td>   {% if personnageLignee.personnage.vivant == 0 %}
-                                            {{ iconPjDead | raw }}
-                                        {% elseif personnageLignee.personnage.isPnj() %}
-                                            {{ iconPnj | raw }}
-                                        {% else %}
-                                            {{ iconPjOld | raw }}
-                                        {% endif %}
-
-                                        {%if personnageLignee.personnage.isLastParticipantOnActiveGn() %}
-                                            <span class="">{{ iconPjConfirmed | raw }}
-                                        {% endif %}</span>
-                                 </td>
-
-                                 <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent1.id}) }}">{{ personnageLignee.parent1.nom }}</a></td>
-
-                                 {% if personnageLignee.parent2 == NULL %}
-                                    <td> - </td>
-                                 {% else %}
-                                    <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent2.id}) }}">{{ personnageLignee.parent2.nom }}</a></td>
-                                 {% endif %}
 
                                  {% if personnageLignee.personnage.groupe == NULL %}
                                     <td> - </td>
                                  {% else %}
                                     <td><a href="{{ path('groupe.detail',{'index':personnageLignee.personnage.groupe.id}) }}">{{ personnageLignee.personnage.groupe.nom }}</a> </td>
+                                 {% endif %}
+
+                                 <td>{{ personnageLignee.personnage.ageReel }} ans</td>
+
+                                 <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent1.id}) }}">{{ personnageLignee.parent1.nom }} ({{ personnageLignee.parent1.ageReel }} ans)</a></td>
+
+                                 {% if personnageLignee.parent2 == NULL %}
+                                    <td> - </td>
+                                 {% else %}
+                                    <td><a href="{{ path('personnage.admin.detail', {'personnage': personnageLignee.parent2.id}) }}">{{ personnageLignee.parent2.nom }} ({{ personnageLignee.parent2.ageReel }} ans)</a></td>
                                  {% endif %}
 
                                  <td>
@@ -110,9 +111,6 @@
                              </tr>
                         {% endfor %}
                     </table>
-
-                    <div class="legend"><span class="legend-header">Légende Statut : </span>{{ iconPjConfirmed | raw }} = PJ Actif, {{ iconPnj | raw }} = PNJ, {{ iconPjOld | raw }} = PJ Non actif, {{ iconPjDead | raw }} = Mort</div>
-                    </div>
                 </div>
             </div>
         </div>
