--- a/src/LarpManager/Views/admin/technologie/index.twig
+++ b/src/LarpManager/Views/admin/technologie/index.twig
@@ -43,7 +43,7 @@
 							<div class="btn-group" role="group" aria-label="..." >
 								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Modifier" href="{{ path('technologie.update', {'technologie':technologie.id}) }}"><i class="fa fa-pencil"></i></a>
 								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Ajouter une Ressource" href="{{ path('technologie.ressource.add', {'technologie':technologie.id}) }}"><i class="fa fa-balance-scale"></i></a>
-								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Voir Personnages" href="{{ path('technologie.personnages', {'technologie':technologie.id}) }}"><i class="fa fa-users"></i></a>
+								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Voir Personnages" href="{{ path('technologie.personnages', {'technologie':technologie.id}) }}"><i class="fa fa-users"> ({{ technologie.personnages|length }})</i></a>
 								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Supprimer" href="{{ path('technologie.delete', {'technologie':technologie.id}) }}"><i class="fa fa-eraser"></i></a>
 							</div>
 						</div>
