--- a/src/LarpManager/Views/admin/debriefing/list.twig
+++ b/src/LarpManager/Views/admin/debriefing/list.twig
@@ -32,7 +32,7 @@
 					<div class="input-group">					
 						{{ form_widget(form.type) }}
 						<div class="input-group-btn">
-							<button type="submit" class="btn btn-default" data-toggle="tooltup" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
+							<button type="submit" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
 							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('debriefing.list') }}"><i class="fa fa-refresh"></i></a>
 						</div>
 					</div>
@@ -133,6 +133,9 @@
 					<th>
 						Visibilité
 					</th>
+					<th>
+						Document
+					</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -159,6 +162,15 @@
 					</td>
 					<td>{{ debriefing.user.displayName }}</td>
 					<td>{{ debriefing.visibility|explainVisibility }}</td>
+					<td>
+						{% if debriefing.documentUrl %}
+							<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Télécharger document" href="{{ path('debriefing.document', {'debriefing': debriefing.id}) }}">
+								<i class="fa fa-download"></i>
+							</a>
+						{% else %}
+							-
+						{% endif %}
+					</td>
 				</tr>
 				{% endfor %}
 			</tbody>
