--- a/src/LarpManager/Views/admin/objet/new.twig
+++ b/src/LarpManager/Views/admin/objet/new.twig
@@ -6,7 +6,7 @@
     
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('items') }}">Liste des objet de jeu</a></li>
+		<li><a href="{{ path('items') }}">Liste des objets de jeu</a></li>
 		<li class="active">Créer un objet de jeu</li>
 	</ol>
 	
