--- a/src/LarpManager/Views/admin/objet/detail.twig
+++ b/src/LarpManager/Views/admin/objet/detail.twig
@@ -36,7 +36,7 @@
     
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('items') }}">Liste des objets de jeu</a></li>
+		<li><a href="{{ path('items') }}">Liste des objet de jeu</a></li>
 		<li class="active">{{ item.label }}</li>
 	</ol>
 	
