--- a/src/LarpManager/Views/admin/personnage/addTrigger.twig
+++ b/src/LarpManager/Views/admin/personnage/addTrigger.twig
@@ -30,6 +30,7 @@
 					<li><strong>LITTERATURE INITIE</strong> : permet de choisir trois langues supplémentaires sauf parmis les anciennes</li>
 					<li><strong>LITTERATURE EXPERT</strong> : permet de choisir trois langues supplémentaires dont 1 ancienne</li>
 					<li><strong>PRETRISE INITIE</strong> : permet de choisir trois descriptifs de religion</li>
+					<li><strong>TECHNOLOGIE</strong> : permet de choisir une technologie</li>
 				</ul>
 				{{ form(form) }}
 			</fieldset>
