--- a/src/LarpManager/Views/admin/gn/printPerso.twig
+++ b/src/LarpManager/Views/admin/gn/printPerso.twig
@@ -105,13 +105,14 @@ table tr td {
 				</td>
 				<td>				
 					{% for document in personnage.documents %}
-						{{ document.code }}&nbsp;{{ document.titre }}<br />
+						{{ document.code }} - {{ document.titre }}<br />
 					{% endfor %}
 
 					{% for item in personnage.items %}
-						{{ item.numero }}&nbsp;{{ item.label }}<br />
+						{{ item.numero }} - {{ item.label }}<br />
 					{% endfor %}
-		
+					{% if personnage.materiel %}{{ personnage.materiel }}<br />{% endif %}
+
 					{% for personnageIngredient in personnage.personnageIngredients %}
 						{{personnageIngredient.nombre}} - {{ personnageIngredient.ingredient }}<br />
 					{% endfor %}
@@ -119,20 +120,20 @@ table tr td {
 					{% for personnageRessource in personnage.personnageRessources %}
 						{{personnageRessource.nombre}} - {{ personnageRessource.ressource }}<br />
 					{% endfor %}
-										
-					{{ personnage.richesse|default(0) }} PA<br />
+
+					{{ personnage.richesse|default(0) }} pièces d'argent<br />
 		
 					{% for technologie in personnage.technologies %}
-						{{ technologie.label }}<br />
+						Technologie - {{ technologie.label }}<br />
 					{% endfor %}
 				</td>
 				<td>
-					{% for groupeSecondaire in personnage.secondaryGroups %}
-						{{ groupeSecondaire.label }}<br />
+					{% for membre in personnage.membres %}
+						{{ membre.secondaryGroup }}<br />
 					{% endfor %}
 					
 					{% for postulant in personnage.postulants %}
-						Candidature au groupe {{ postulant.secondaryGroup.label }} en attente de validation.<br />
+						{{ postulant.secondaryGroup.label }} en attente de validation.<br />
 					{% endfor %}
 				</td>
 			</tr>
